# cmd/ambulance-api-service/main.go
@@ -8,6 +8,12 @@ import (
 	"github.com/TechOctopus/ambulance-webapi/api"
 	"github.com/TechOctopus/ambulance-webapi/internal/ambulance_wl"
 	"github.com/gin-gonic/gin"
+
+	"context"
+	"time"
+
+	"github.com/TechOctopus/ambulance-webapi/internal/db_service"
+	"github.com/gin-contrib/cors"
 )
 
 func main() {
@@ -22,10 +28,28 @@ func main() {
     }
     engine := gin.New()
     engine.Use(gin.Recovery())
+    corsMiddleware := cors.New(cors.Config{
+        AllowOrigins:     []string{"*"},
+        AllowMethods:     []string{"GET", "PUT", "POST", "DELETE", "PATCH"},
+        AllowHeaders:     []string{"Origin", "Authorization", "Content-Type"},
+        ExposeHeaders:    []string{""},
+        AllowCredentials: false,
+        MaxAge: 12 * time.Hour,
+    })
+    engine.Use(corsMiddleware)
+
+    // setup context update  middleware
+    dbService := db_service.NewMongoService[ambulance_wl.Ambulance](db_service.MongoServiceConfig{})
+    defer dbService.Disconnect(context.Background())
+    engine.Use(func(ctx *gin.Context) {
+        ctx.Set("db_service", dbService)
+        ctx.Next()
+    })
 
     handleFunctions := &ambulance_wl.ApiHandleFunctions{
         AmbulanceConditionsAPI:  ambulance_wl.NewAmbulanceConditionsApi(),
         AmbulanceWaitingListAPI: ambulance_wl.NewAmbulanceWaitingListApi(),
+        AmbulancesAPI:           ambulance_wl.NewAmbulancesApi(),
     }
 
     ambulance_wl.NewRouterWithGinEngine(engine, *handleFunctions)
